public: add link to Cilium
A good example of cool things you can do with eBPF and XDP.

Signed-off-by: Alexander Alemayhu <alexander@alemayhu.com>

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
         <h3>Useful Links</h3>
       <ul>
         <li><a href="http://prototype-kernel.readthedocs.io/en/latest/index.html">Prototype Kernel<a></li>
+        <li><a href="https://github.com/cilium/cilium">Cilium<a></li>
       </ul>
       </div>
     </div>
