public: use static textarea rows
The dynamic size could be added later if needed.

Signed-off-by: Alexander Alemayhu <alexander@alemayhu.com>

--- a/public/index.html
+++ b/public/index.html
@@ -19,13 +19,13 @@
 	<textarea 
             autocorrect="off" autocomplete="off" autocapitalize="off" spellcheck="false"
 	ng-change="input_code_changed(this)"
- rows="{{ number_of_rows(input_code) }}" cols="200" type="text" ng-model="input_code"
+ rows="15" cols="200" type="text" ng-model="input_code"
 				    placeholder="Insert / write your XDP program here">
 	</textarea>
       </div>
       <div>
 	<textarea readonly
-           rows="{{ number_of_rows(compilation_results) }}" cols="200" type="text" ng-model="compilation_results">
+           rows="15" cols="200" type="text" ng-model="compilation_results">
 	</textarea>
       </div>
       <div>
