public: make tasks framework use html
This is much more flexible to the challenge writer.

Signed-off-by: Alexander Alemayhu <alexander@alemayhu.com>

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       <hr>
       <div class="container">
 	This is task <span class="badge badge-default">{{ task_number }}</span> of the XDP Playground
-	<p>{{ task_description }}</p>
+        <p ng-bind-html="task_description"></p>
       </div>
 	<textarea 
             autocorrect="off" autocomplete="off" autocapitalize="off" spellcheck="false"
