--- a/public/tasks/0.html
+++ b/public/tasks/0.html
@@ -8,8 +8,9 @@ href="http://prototype-kernel.readthedocs.io/en/latest/networking/XDP/implementa
 For this round the main goal is to take the program below and make it drop all
 incoming packets.
 
+<hr>
 <pre>
-#include <linux/bpf.h>
+#include &ltlinux/bpf.h&gt
 
 #ifndef __section
 # define __section(NAME)                                                \
