public: experiment with <br> in task0
Should split lines up more.

Signed-off-by: Alexander Alemayhu <alexander@alemayhu.com>

--- a/public/tasks/0.html
+++ b/public/tasks/0.html
@@ -1,9 +1,9 @@
-e<strong>X</strong>press <strong>D</strong>ata <strong>P</strong>ath is a new
-technology for fast packet processing at the lowest part of the stack. It's a
-solution that is competing with userspace solutions like DPKD.
+e<strong>X</strong>press <strong>D</strong>ata <strong>P</strong>ath is a new<br>
+technology for fast packet processing at the lowest part of the stack. It's a</br>
+solution that is competing with userspace solutions like DPKD.<br>
 
-XDP supports a couple of actions, which you can read all about at <a
-href="http://prototype-kernel.readthedocs.io/en/latest/networking/XDP/implementation/xdp_actions.html">prototype-kernel</a>.
+<p>XDP supports a couple of actions, which you can read all about at <a
+href="http://prototype-kernel.readthedocs.io/en/latest/networking/XDP/implementation/xdp_actions.html">prototype-kernel</a>.<br>
 
 For this round the main goal is to take the program below and make it drop all
 incoming packets.
