public/task0: remove one tag
Looks better.

Signed-off-by: Alexander Alemayhu <alexander@alemayhu.com>

--- a/public/tasks/0.html
+++ b/public/tasks/0.html
@@ -1,4 +1,4 @@
-e<strong>X</strong>press <strong>D</strong>ata <strong>P</strong>ath is a new<br>
+e<strong>X</strong>press <strong>D</strong>ata <strong>P</strong>ath is a new
 technology for fast packet processing at the lowest part of the stack. It's a</br>
 solution that is competing with userspace solutions like DPKD.<br>
 
