--- a/public/index.html
+++ b/public/index.html
@@ -34,12 +34,11 @@
         </div>
       <div>
         <div class="mt-2 col-md-12">
-      <div class="dropdown">
+      <div class="dropup">
 	<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	  Load challenge
 	</button>
-	<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-	  <button class="dropdown-item" ng-repeat="c in Challenges" ng-model="selected_challenge"
+	<div class="dropdown-menu" aria-labelledby="dropdownMenuButton"> <button class="dropdown-item" ng-repeat="c in Challenges"
 							ng-click="LoadChallenge(c)">{{ c }}</button>
 	</div>
       </div>
