public: fix expression and add more text to LoadChallenge drop-down
Reads better.

Signed-off-by: Alexander Alemayhu <alexander@alemayhu.com>

--- a/public/index.html
+++ b/public/index.html
@@ -39,8 +39,8 @@
 	  Load challenge
 	</button>
 	<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <button ng-class="c == task_number ? 'dropdown-item' : 'dropdown-item disabled'" ng-repeat="c in Challenges"
-                                        ng-click="LoadChallenge(c)">{{ c }}</button>
+          <button ng-class="c == task_number ? 'dropdown-item disabled' : 'dropdown-item'" ng-repeat="c in Challenges"
+                                        ng-click="LoadChallenge(c)">Challenge {{ c }}</button>
 	</div>
       </div>
         </div>
