Add Google pretty
Gives syntax highlighting in the challenge descriptions.

https://github.com/google/code-prettify

Signed-off-by: Alexander Alemayhu <alexander@alemayhu.com>

--- a/public/tasks/0.html
+++ b/public/tasks/0.html
@@ -9,7 +9,7 @@ For this round the main goal is to take the program below and make it drop all
 incoming packets.
 
 <hr>
-<pre>
+<pre class="prettyprint">
 #include &ltlinux/bpf.h&gt
 
 #ifndef __section
