public: add info for users looking for a compile button
Not needed.

Signed-off-by: Alexander Alemayhu <alexander@alemayhu.com>

--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,11 @@
         <p ng-bind-html="task_description"></p>
       </div>
         <div class="mt-2 col-md-12">
-	<textarea class="form-control"
+	<textarea class="form-control prettyprint"
             autocorrect="off" autocomplete="off" autocapitalize="off" spellcheck="false"
 	ng-change="input_code_changed(this)"
  rows="15" cols="80%" type="text" ng-model="input_code"
-				    placeholder="Insert / write your XDP program here">
+				    placeholder="Insert / write your XDP program here (compiles on the fly)">
 	</textarea>
         </div>
         <div class="mt-2 col-md-12">
