package, index, public: use marked to render README for about page
Add it for the people who find the page randomly.

Signed-off-by: Alexander Alemayhu <alexander@alemayhu.com>

--- a/public/index.html
+++ b/public/index.html
@@ -48,8 +48,9 @@
         <hr>
         <h3>Useful Links</h3>
       <ul>
-        <li><a href="http://prototype-kernel.readthedocs.io/en/latest/index.html">Prototype Kernel</a></li>
+        <li><a href="/about">About</a></li>
         <li><a href="https://github.com/cilium/cilium">Cilium</a></li>
+        <li><a href="http://prototype-kernel.readthedocs.io/en/latest/index.html">Prototype Kernel</a></li>
       </ul>
       </div>
       <code ng-if="versions != 'xyz'">{{ versions }}</code>
