public: experiment more with page setup
o don't show challenge prefix for regular pages.
o add references page.

Signed-off-by: Alexander Alemayhu <alexander@alemayhu.com>

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
 	</button>
 	<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
           <button ng-class="c == task_number ? 'dropdown-item disabled' : 'dropdown-item'" ng-repeat="c in Challenges"
-                                        ng-click="LoadChallenge(c)">Challenge {{ c }}</button>
+                                                                                           ng-click="LoadChallenge(c)">{{ isNumber(c) ? 'Challenge ' : ''}}{{ c }}</button>
 	</div>
       </div>
         </div>
