tree-wide: Rename the tasks to pages
This makes better describe interactive tasks and reading
material.

Signed-off-by: Alexander Alemayhu <alexander@alemayhu.com>

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
         <div class="mt-2 col-md-12">
       <div class="dropup">
 	<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	  Load challenge
+	  Load page
 	</button>
 	<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
           <button ng-class="c == task_number ? 'dropdown-item disabled' : 'dropdown-item'" ng-repeat="c in Challenges"
