--- a/public/pages/0.html
+++ b/public/pages/0.html
@@ -9,7 +9,7 @@ For this round the main goal is to take the program below and make it drop all
 incoming packets.
 
 <hr>
-<pre class="prettyprint">
+<pre>
 #include &ltlinux/bpf.h&gt
 
 #ifndef __section
