public: edit challenge 0
Checking if rsync is working.

Signed-off-by: Alexander Alemayhu <alexander@alemayhu.com>

--- a/public/pages/0.html
+++ b/public/pages/0.html
@@ -5,8 +5,8 @@ solution that is competing with userspace solutions like DPKD.<br>
 <p>XDP supports a couple of actions, which you can read all about at <a
 href="http://prototype-kernel.readthedocs.io/en/latest/networking/XDP/implementation/xdp_actions.html">prototype-kernel</a>.<br>
 
-For this round the main goal is to take the program below and make it drop all
-incoming packets.
+<p>For this round the main goal is to take the program below and make it drop all
+        incoming packets.</p>
 
 <hr>
 <pre>
