public/pages/0: add missing version section
Signed-off-by: Alexander Alemayhu <alexander@alemayhu.com>

--- a/public/pages/0.html
+++ b/public/pages/0.html
@@ -24,4 +24,5 @@ int xdp_drop(struct xdp_md *ctx)
 }
 
 char __license[] __section("license") = "GPL";
+int __version __section("version") = 1;
 </pre>
