public: change Cilium link
Signed-off-by: Alexander Alemayhu <alexander@alemayhu.com>

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
         <h3>Useful Links</h3>
       <ul>
         <li><a href="/about">About</a></li>
-        <li><a href="https://github.com/cilium/cilium">Cilium</a></li>
+        <li><a href="https://github.com/cilium/cilium#what-is-ebpf-and-xdp">Cilium</a></li>
         <li><a href="http://prototype-kernel.readthedocs.io/en/latest/index.html">Prototype Kernel</a></li>
       </ul>
       </div>
