public: begin showing the verdict
For now we just show the failures. Follow ups will add pass and reduce
the output.

Signed-off-by: Alexander Alemayhu <alexander@alemayhu.com>

--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,15 @@
 	</textarea>
         </div>
         <div class="mt-2 col-md-12">
-        <textarea class="form-control" readonly ng-if="compilation_results.length > 0"
+          <!--Only show the compilation results when we are waiting for a verdict-->
+        <textarea class="form-control" readonly ng-if="compilation_results.length > 0 && verdict.length == 0"
            rows="15" cols="80%" type="text" ng-model="compilation_results">
 	</textarea>
+          <!--Show error alert when the verdict is failure-->
+          <div ng-if="verdict=='fail'" class="alert alert-danger" role="alert">
+            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+            {{ compilation_results  }}
+          </div>
         </div>
       <div>
         <div class="mt-2 col-md-12">
