--- a/public/pages/useful_links.html
+++ b/public/pages/useful_links.html
@@ -1,4 +1,12 @@
-<h2>Man pages</h2>
+<h2>Useful links</h2>
+
+<ul>
+  <li><a href="/about">About</a></li>
+  <li><a href="https://github.com/cilium/cilium#what-is-ebpf-and-xdp">Cilium</a></li>
+  <li><a href="http://prototype-kernel.readthedocs.io/en/latest/index.html">Prototype Kernel</a></li>
+</ul>
+
+<h3>Man pages</h3>
 <ul>
   <li><a href="http://man7.org/linux/man-pages/man2/bpf.2.html">bpf(2)</a></li>
   <li><a href="http://man7.org/linux/man-pages/man8/tc-bpf.8.html">tc-bpf(8)</a></li>
