--- a/public/pages/useful_links.html
+++ b/public/pages/useful_links.html
@@ -3,6 +3,7 @@
 <ul>
   <li><a href="/about">About</a></li>
   <li><a href="https://github.com/cilium/cilium#what-is-ebpf-and-xdp">Cilium</a></li>
+    <li><a href="http://cilium.readthedocs.io/en/latest/bpf/#bpf-and-xdp-reference-guide">BPF and XDP Reference Guide</a></li>
   <li><a href="http://prototype-kernel.readthedocs.io/en/latest/index.html">Prototype Kernel</a></li>
 </ul>
 
@@ -13,4 +14,3 @@
   <li><a href="http://man7.org/linux/man-pages/man8/bpfc.8.html">bpfc(8)</a></li>
   <li><a href="http://man7.org/linux/man-pages/man8/bpfc.8.html">bpfc(8)</a></li>
 </ul>
-// TODO: list other reading materials.
