public/pages/1: use ordered list
Signed-off-by: Alexander Alemayhu <alexander@alemayhu.com>

--- a/public/pages/1.html
+++ b/public/pages/1.html
@@ -1,7 +1,7 @@
 <p>Take the program below and make it:</p>
 <ul>
-	<li>1. Drop all IPV4 traffic </li>
-	<li>2. For all  IPV6 modify field x and pass it on.</li>
+	<ol>1. Drop all IPV4 traffic </ol>
+	<ol>2. For all  IPV6 modify field x and pass it on.</ol>
 </ul>
 <div class="alert alert-warning" role="alert">
 	hint: Remember to perform your boundary checks.
