public: reword and clear state
Signed-off-by: Alexander Alemayhu <alexander@alemayhu.com>

--- a/public/pages/intro.html
+++ b/public/pages/intro.html
@@ -1,12 +1,5 @@
-<h2>Welcome to the XDP playground!</h2>
+<strong>Welcome to the XDP playground!</strong>
 
-<p>This is a open list challenge which if you follow will teach you everything</br>
-you ever wanted to know about XDP. To complete the challenge you have to</br>
-write real programs. Your programs gets automatically verified so zero</br>
-waiting (famous last words).</p>
-
-<p>To start the challenge use the picker located somewhere on the page. This</br>
-is not a speed contest. If it takes longer than you'd like, take a break</br>
-or go read the man pages and make sure you understand it.</p>
-
+<p>This is a open list challenge focusing on e<strong>X</strong>press <strong>D</strong>ata <strong>P</strong>ath.</p>
+<p>To start any of the available challenges use the picker located somewhere on the page.<br>
 <p>Enjoy your to journey into the world of high speed packet mangling.</p>
