--- a/public/pages/1.html
+++ b/public/pages/1.html
@@ -1,7 +1,9 @@
+**Challenge 1 is not really ready for use yet, WIP**
+
 <p>Take the program below and make it:</p>
 <ul>
-	<ol>1. Drop all IPV4 traffic </ol>
-	<ol>2. For all  IPV6 modify field x and pass it on.</ol>
+	<ol>1. Drop all IPv4 traffic </ol>
+	<ol>2. For all  IPv6 modify field x and pass it on.</ol>
 </ul>
 <div class="alert alert-warning" role="alert">
 	hint: Remember to perform your boundary checks.
@@ -14,12 +16,9 @@
 
 #include "bpf_endian.h"
 
-#ifndef __section
-# define __section(NAME)                                                \
-        __attribute__((section(NAME), used))
-#endif
+#define SEC(NAME) __attribute__((section(NAME), used))
 
-__section("xdp")
+SEC("xdp")
 int xdp_drop(struct xdp_md *ctx)
 {
 	void *data_end = (void *)(long)ctx->data_end;
@@ -35,6 +34,6 @@ int xdp_drop(struct xdp_md *ctx)
 	return XDP_PASS;
 }
 
-char __license[] __section("license") = "GPL";
-int __version __section("version") = 1;
+char __license[] SEC("license") = "GPL";
+int __version SEC("version") = 1;
 </pre>
