public/pages/1: use html tags
triggering page run

Signed-off-by: Alexander Alemayhu <alexander@alemayhu.com>

--- a/public/pages/1.html
+++ b/public/pages/1.html
@@ -1,4 +1,4 @@
-**Challenge 1 is not really ready for use yet, WIP**
+<strong>Challenge 1 is not really ready for use yet, WIP</strong>
 
 <p>Take the program below and make it:</p>
 <ul>
