--- a/public/pages/1.html
+++ b/public/pages/1.html
@@ -2,11 +2,11 @@
 
 <p>Take the program below and make it:</p>
 <ul>
-	<ol>1. Drop all IPv4 traffic </ol>
-	<ol>2. For all  IPv6 modify field x and pass it on.</ol>
+	<ol>1. Drop all IPv4 traffic</ol>
+	<ol>2. Pass all IPv6 traffic</ol>
 </ul>
 <div class="alert alert-warning" role="alert">
-	hint: Remember to perform your boundary checks.
+	hint: Remember to perform your checks.
 </div>
 <hr>
 
